[package]
name = "metaplex-decoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.3"
solana-program = "1.7.3"
solana-sdk = "1.7.3"
spl-token = "3.1.1"
bs58 = "0.4.0"
spl-associated-token-account = "1.0.2"
borsh = "0.9.1"
spl-token-metadata = "0.0.1"
config = "0.11.0"
serde = "1.0.130"
anyhow = "1.0.43"
serde_json = "1.0.67"
thiserror = "1.0.29"
num-derive = "0.3.3"
num-traits = "0.2.14"
